tests/parsing/smtlib/v2.6/errors/134_datatype_symbol_list_start_1.expected
File "tests/parsing/smtlib/v2.6/errors/134_datatype_symbol_list_start_1.smt2", line 2, character 28-29:
2 | (declare-datatype foo (par (_)))
                                ^
Error while parsing a list of sort variables to parameterize a datatype,
      read the reserved word '_',
      but expected a symbol.
